# CamStack

./: .gitignore  DEVELOPMENT_GUIDE.md  ReadMe.txt  build_camstack_bundle.sh
.github/: copilot-instructions.md
CamStack_1.0.0/: README.md  install_me.sh
CamStack_1.0.0/camstack/: .gitignore  README.md  pyproject.toml
CamStack_1.0.0/camstack/app/: camera_stream.py  discovery.py  fallback.py  identify_streams.py  main.py  motion_detector.py  motion_memory.py  overlay_gen.py  player.py  redirect_http.py  webcam_catalog_tool.py  webcam_curator.py
CamStack_1.0.0/camstack/app/templates/: base.html  index.html  live.html  motion.html
CamStack_1.0.0/camstack/docs/: reddit_integration.md
CamStack_1.0.0/camstack/scripts/: enable_private_ca.sh  install_camstack.sh  pki.sh  run_camplayer.sh
CamStack_1.0.0/camstack/services/: camplayer.service  camredirect.service  camstack.service
