[project]
name = "camstack"
version = "2.0.1"
requires-python = ">=3.10"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "jinja2",
  "python-multipart",
  "loguru",
  "wsdiscovery",
  "onvif-zeep",
  "psutil",
  "requests",
  "starlette",
  "numpy",
  "pillow",
]

[tool.uv]
index-url = "https://pypi.org/simple"
