[project]
name = "camstack"
version = "2.0.1"
requires-python = ">=3.10"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "jinja2",
  "python-multipart",
  "loguru",
  "wsdiscovery",
  "onvif-zeep",
  "psutil",
  "requests",
  "starlette",
  "numpy",
  "pillow",
  "opencv-python-headless",
  "httpx",
  "yt-dlp",
  "rich",
]

[project.scripts]
webcam-catalog = "app.webcam_catalog_tool:main"

[tool.uv]
index-url = "https://pypi.org/simple"
